# monograph

./: .all-contributorsrc  .dockerignore  .gitignore  license.adoc  prompt.py  pyproject.toml  readme.adoc  readme.md
.github/issue_template/: bug_report.yml  config.yml
python_monograph/: problem_template.adoc
python_monograph/199. binary_tree_right_side_view/: problem.adoc  solution.adoc
python_monograph/array_shuffling/: problem.adoc  solution.py
python_monograph/calculate_data_size_automatically/: problem.adoc  solution_00.py  solutions.adoc
python_monograph/calculate_file_size_automatically/: problem.adoc  solution.adoc  solution.py
python_monograph/check_if_a_substring_is_in_a_list_strings/: problem.adoc  solution.adoc  solution.py  solution_00.py  solution_01.py  solution_02.py  (+3 more)
quizzes/: data_types.adoc
src/: introduction_to_big_o.adoc
template/: problem.adoc  solution.adoc  solution.py  solutions.adoc
tests/: test_array_shuffling.py  test_calculate_file_size_automatically.py  test_check_if_a_substring_is_in_a_list_of_strings.py  test_check_if_two_circles_intersect_overlap_or_encompass.py  test_find_memory_size_of_object.py  test_find_multiples_of_3_or_5.py  test_find_the_equilibrium_index_of_an_array.py  test_find_the_intersection_of_two_lists_of_tuples.py  test_find_the_longest_substring_without_repeating_characters.py  test_find_unique_keys_from_a_list_of_dicts.py  test_flatten_a_list_of_lists_or_tuples.py  test_merge_dictionaries.py  test_merge_two_sorted_lists.py  test_remove_duplicates_from_a_list.py  test_reverse_a_sentence.py  test_search_a_dictionary_recursively.py
(+215 files in other folders)
