[tool.poetry]
name = "python-monograph"
version = "0.1.0"
description = "How do I...?"
authors = ["Jerod Gawne <jerodg@pm.me>"]
readme = "readme.adoc"
license = "SSPL"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.0.0"
numpy = "^1.26.4"
pandas = "^2.2.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>"]
build-backend = "poetry.core.masonry.api"
